--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
- :root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+:root {
   font-family: "Nunito Sans", sans-serif;
   /*line-height: 1.5;*/
   /*font-weight: 400;*/
